fixed footer layout on mobile

--- a/pages/style.css
+++ b/pages/style.css
@@ -968,6 +968,12 @@ footer {
 
     }
 
+    .socials {
+        font-size: 0.15rem;
+        margin-left: 0.09rem;
+
+    }
+
 
 
     
